--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,14 @@
   text-align: center;
 }
 
+#js-input-field {
+  font-size: inherit;
+}
+
 .country-list {
-  list-style: none;
-  font-size: 14px;
+  list-style: disc;
+  font-size: 22px;
+  margin-left: 30px;
 }
 
 .country-info {
